<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/toolbar"
    tools:context="compenomatikus.httpsgithub.ois_adminapp.AdminFragment">

    <EditText
        android:id="@+id/latitude"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:editable="false"
        android:hint="@string/latitude_TXT"
        android:textAlignment="center"
        android:textSize="13dp" />

    <EditText
        android:id="@+id/longitude"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:editable="false"
        android:hint="@string/longitude_TXT"
        android:textAlignment="center"
        android:textSize="13dp" />

    <EditText
        android:id="@+id/altitude"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:editable="false"
        android:hint="@string/altitude_TXT"
        android:textAlignment="center"
        android:textSize="13dp" />


    <Button
        android:id="@+id/middleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="75dp"
        android:layout_marginTop="15dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/middleButton_TXT">

        <requestFocus />
    </Button>

    <EditText
        android:id="@+id/topic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/author"
        android:layout_alignEnd="@+id/author"
        android:layout_alignLeft="@+id/author"
        android:layout_alignRight="@+id/author"
        android:layout_alignStart="@+id/author"
        android:hint="@string/topic_TXT" />

    <EditText
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/author_TXT"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/middleButton"
        android:layout_below="@+id/author"
        android:layout_centerHorizontal="true"
        android:height="100dp"
        android:ems="10"
        android:hint="@string/content_TXT"
        android:inputType="textMultiLine"
        android:textAlignment="center" />

    <ImageButton
        android:id="@+id/bluetooth_BTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/topic"
        android:layout_alignEnd="@+id/middleButton"
        android:layout_alignStart="@+id/middleButton"
        android:layout_below="@+id/latitude"
        android:background="#00000000"
        android:src="@mipmap/bluetooth_on" />

</RelativeLayout>
